--- a/client/src/style/app.css
+++ b/client/src/style/app.css
@@ -1,8 +1,8 @@
 body{
-    background-color: white 
+  background-color: #1C1B1E;
+  color: #fac564;
 }
 
 .containerButtonHome {
-    margin-top: 12rem;
+  margin-top: 12rem;
   }
-  
