Added cards loading from backend

--- a/client/src/style/events-page.css
+++ b/client/src/style/events-page.css
@@ -17,3 +17,8 @@
 .react-datepicker__input-container input {
   width: 75%;
 }
+
+.wrapper{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
