--- a/client/src/style/m-button.css
+++ b/client/src/style/m-button.css
@@ -18,5 +18,5 @@
 .m-button:active{
   background: #fac564 !important;
   border-color: #fac564 !important;
-  box-shadow: 0 0 0 0 !important;
+  box-shadow: none !important;
 }
