--- a/client/src/style/feedback.css
+++ b/client/src/style/feedback.css
@@ -11,6 +11,23 @@
     margin-top: 10px;
 }
 
+.showMoreComm{
+    width: 100%; 
+    height: 15px; 
+    border-bottom: 1px solid black; 
+    text-align: center;
+    margin-left: auto;
+}
+.showMoreCommSpan{
+    font-size: 15px;
+    padding: 0 10px;
+    background-color: white;
+}
+.showMoreCommSpan:hover{
+    color: blue;
+    cursor: pointer;
+}
+
 .textAreaFeedback:focus{
     box-shadow: 0 0 0 1px rgba(41, 176, 217, .25);
 }
