--- a/client/src/style/feedback.css
+++ b/client/src/style/feedback.css
@@ -14,14 +14,14 @@
 .showMoreComm{
     width: 100%; 
     height: 15px; 
-    border-bottom: 1px solid black; 
+    border-bottom: 1px solid white; 
     text-align: center;
     margin-left: auto;
 }
 .showMoreCommSpan{
     font-size: 15px;
     padding: 0 10px;
-    background-color: white;
+    background-color: #1C1B1E;
 }
 .showMoreCommSpan:hover{
     color: blue;
@@ -45,6 +45,7 @@
 .hrStyle{
     padding: 0;
     margin: 0;
+    background-color: white;
 }
 .nameDate{
     margin-right: 35px;
