--- a/client/src/style/feedback.css
+++ b/client/src/style/feedback.css
@@ -1,4 +1,4 @@
-.containerFeedback{
+.feedback{
     border-radius: 10px;
     border: 1px solid #ccc;
     padding: 10px;
@@ -6,70 +6,22 @@
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
     width: auto; 
 }
-
-.btnFormSend{
-    margin-top: 10px;
-}
-
-.showMoreComm{
+.showComments{
     width: 100%; 
     height: 15px; 
     border-bottom: 1px solid white; 
     text-align: center;
     margin-left: auto;
 }
-.showMoreCommSpan{
+.commSpan{
     font-size: 15px;
     padding: 0 10px;
     background-color: #1C1B1E;
 }
-.showMoreCommSpan:hover{
+.commSpan:hover{
     color: blue;
     cursor: pointer;
 }
 
-.textAreaFeedback:focus{
-    box-shadow: 0 0 0 1px rgba(41, 176, 217, .25);
-}
-
-.feedbackUserContainer{
-    display: inline-flex;
-    width: 100%;
-    margin-top: 15px;
-}
-.feedbackMess{
-    width: 100%;
-    margin: 0px 10px;
-}
-
-.hrStyle{
-    padding: 0;
-    margin: 0;
-    background-color: white;
-}
-.nameDate{
-    margin-right: 35px;
-    font-size: 12px;
-}
-
-.answer{
-    margin: 0px 30px 0px 10px;
-    padding: auto;
-}
-.answer:hover{
-    color: blue;
-    cursor: pointer;
-}
-
-.complaint{
-    float: right;
-    margin-right: 10px;
-}
-.complaint:hover{
-    cursor: pointer;
-}
 
 
-.likeDislike:hover{
-    cursor: pointer;
-}
