--- a/client/src/styles/profile-info.css
+++ b/client/src/styles/profile-info.css
@@ -7,9 +7,9 @@
 }
 
 .btn-inf{
-  width: 25%;
+  width: 26%;
 }
 
 @media (max-width: 720px) {
-  .btn-inf {width: 30%;}
+  .btn-inf {width: 30%; margin-bottom: 5%}
 }
