--- a/client/src/styles/menu.css
+++ b/client/src/styles/menu.css
@@ -1,9 +1,11 @@
 .header {
     
     background-image: url('/img/dish-back.jpeg');
+    height: 10fr;
 }
 
 .header span {
     text-align: center;
     height: 5fr;
+    color: black;
 }
