--- a/client/src/styles/feedback-send.css
+++ b/client/src/styles/feedback-send.css
@@ -1,6 +1,13 @@
-.textFeedback:focus{
-    box-shadow: 0 0 0 1px rgba(41, 176, 217, .25);
+.textFeedback:focus {
+  box-shadow: 0 0 0 1px rgba(41, 176, 217, .25);
 }
-.btnFormSend{
-    margin-top: 10px;
+
+.btnFormSend {
+  margin-top: 10px;
+  width: 130px;
+}
+
+.btnFormSendDanger {
+  margin-top: 10px;
+  width: 120px;
 }
