--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -1,8 +1,7 @@
-.profile-menu {
+.list-group {
   border: 1px solid #fac564;
   border-radius: 4px;
-  padding-top: 16px;
-  padding-bottom: 8px;
+  padding: 16px 16px 8px 16px;
   margin-bottom: 16px;
 }
 
