buf fix login bind

--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -1,8 +1,9 @@
-@media all and (min-width: 480px) {
-
-  .Login form {
+  .Login {
     margin: 0 auto;
     max-width: 320px;
     position: center;
   }
-}
+  .error {
+    color: red;
+  }
+
