--- a/client/src/styles/events-page.css
+++ b/client/src/styles/events-page.css
@@ -5,7 +5,7 @@
   -o-background-size: cover;
   -webkit-background-size: cover;
   -webkit-transform:translatez(0);
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .page-header-title{
