--- a/client/src/styles/m-button.css
+++ b/client/src/styles/m-button.css
@@ -20,3 +20,9 @@
   border-color: #fac564 !important;
   box-shadow: none !important;
 }
+
+.m-button:disabled{
+  background: #000000 !important;
+  border-color: #fac564 !important;
+  box-shadow: none !important;
+}
