--- a/client/src/styles/register-login-components.css
+++ b/client/src/styles/register-login-components.css
@@ -42,7 +42,7 @@
 	 margin-top: 1px;
 	 min-width: 18em;
 	 height: 37px;
-	 padding: 0px 10px;
+	 padding: 10px 35px 10px 10px;
 	 font-size: 16px;
 	 font-family: "Open Sans", sans-serif;
 	 background-color: #dff1ff4a;
