--- a/client/src/styles/menu.css
+++ b/client/src/styles/menu.css
@@ -25,8 +25,10 @@
     border: 1px solid #E1E1E1;
 }
 
-.headers-item p {
-    margin: 0px;
+.header-item {
+    text-align: center;
+    margin: 5px;
+    color: #fac564;
 }
 
 .col-item {
@@ -34,3 +36,7 @@
     margin: 5px;
 }
 
+.col-item p{
+    text-align: left;
+    font-size: 10px;
+}
