add drop-down button

--- a/client/src/styles/menu.css
+++ b/client/src/styles/menu.css
@@ -40,3 +40,9 @@
     text-align: left;
     font-size: 10px;
 }
+
+.drop-down {
+    background-color: #fac564;
+    border-color: #fac564;
+    color: black;
+}
