--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -24,10 +24,15 @@ body{
 }
 
 .btn-restaurants{
-  font-size: 150%;
+  font-size: 160%;
 }
 
 .btn-restaurants:hover{
   color: black;
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  border-width: 2px;
+}
+
+.btn-restaurants:active{
+  text-shadow: none;
 }
