--- a/client/src/styles/theme/buttons.css
+++ b/client/src/styles/theme/buttons.css
@@ -6,6 +6,7 @@
 }
 
 .btn-primary:hover {
+  color: white !important;
   background: none !important;
   border-color: #fac564 !important;
   box-shadow: none !important;
@@ -18,6 +19,7 @@
 }
 
 .btn-primary:active{
+  color: black !important;
   background: #fac564 !important;
   border-color: #fac564 !important;
   box-shadow: none !important;
