--- a/client/src/styles/menu.css
+++ b/client/src/styles/menu.css
@@ -32,7 +32,6 @@
 
 .col-item {
     text-align: center;
-    
     font-size: 20px;
 }
 
@@ -48,8 +47,5 @@
 }
 
 .image-menu-item {
-    align-items: center;
-    margin-left: 10px;
-    margin-right: 15px;
-
+    margin-top: 10px;
 }
