--- a/client/src/styles/events-page.css
+++ b/client/src/styles/events-page.css
@@ -6,6 +6,7 @@
   -webkit-background-size: cover;
   -webkit-transform:translatez(0);
   min-height: 100vh;
+  padding-bottom: 55px;
 }
 
 .page-header-title{
